--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -16,15 +16,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 100px;
+    // margin-top: 100px;
     color: #fff;
     font-size: 28px;
     font-family: serif;
     // border: 1px solid white;
-    padding-top: 90px;
+    // padding-top: 90px;
     @include Mobile {
-      padding-top: 70px;
-      font-size: 22px;
+      h1 {
+        margin-top: 120px;
+        font-size: 38px;
+      }
     }
   }
 
@@ -147,6 +149,7 @@
           border-radius: 20px;
           @include Mobile {
             flex: 0.65;
+            align-items: center;
           }
 
           .leftContainer {
@@ -155,6 +158,10 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            @include Mobile {
+              height: 100%;
+              justify-content: space-evenly;
+            }
             // background-color: red;
 
             h2 {
@@ -168,7 +175,7 @@
                 font-size: 20px;
               }
               @include Mobile {
-                font-size: 24px;
+                font-size: 20px;
                 margin-bottom: 10px;
               }
             }
@@ -259,6 +266,7 @@
             @include Mobile {
               width: 100%;
               height: 175px;
+              border-radius: 8px;
             }
           }
         }
